--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,15 @@
 spring.application.name=agenda
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/agenda
-spring.datasource.username=postgres
-spring.datasource.password=tonito
-
+# Datasource (usa variaveis de ambiente)
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-# Chave secreta para login JWT
-api.security.token.secret=meu-segredo-super-seguro
+# Seguranca
+api.security.token.secret=${JWT_SECRET}
 
-# Se a variável ADMIN_EMAIL não existir, o padrão será o e-mail abaixo
-api.security.admin.email=${ADMIN_EMAIL:admin@sistema.com}
-api.security.admin.password=${ADMIN_PASSWORD:admin123}
+api.security.admin.email=${ADMIN_EMAIL}
+api.security.admin.password=${ADMIN_PASSWORD}
