criando rotas de agendamentos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=agenda
 
 # Datasource (usa variaveis de ambiente)
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/agenda}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:tonito}
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 # Seguranca
-api.security.token.secret=${JWT_SECRET}
+api.security.token.secret=${JWT_SECRET:meu-segredo-super-seguro}
 
-api.security.admin.email=${ADMIN_EMAIL}
-api.security.admin.password=${ADMIN_PASSWORD}
+api.security.admin.email=${ADMIN_EMAIL:admin@sistema.com}
+api.security.admin.password=${ADMIN_PASSWORD:admin123}
